# Vibe-Qwen

./: CLAUDE.md  CONTEXT.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: ci.yml
bff/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
bff/src/vibe_qwen/: __init__.py  config.py  hotword_io.py  hotword_text.py  main.py
bff/src/vibe_qwen/adapters/: __init__.py  base.py  stub.py
bff/src/vibe_qwen/api/: __init__.py  admin_hotwords.py  health.py  hotwords.py
bff/src/vibe_qwen/files/: __init__.py  cleanup.py
bff/src/vibe_qwen/middleware/: __init__.py  limits.py  origin.py
bff/src/vibe_qwen/persistence/: __init__.py  db.py  hotwords.py
bff/tests/: test_admin_hotwords.py  test_cleanup.py  test_cors.py  test_db.py  test_health.py  test_hotword_context.py  test_hotword_import_export.py  test_hotwords_consumer.py  test_limits.py  test_origin.py
docs/: spec.md
docs/adr/: 0001-decoupled-model-serving.md  0002-design-voice-pinned-on-create.md  0003-rest-consumer-contract.md
docs/agents/: domain.md  issue-tracker.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  HotwordsPanel.test.tsx  HotwordsPanel.tsx  api.ts  health.test.ts  health.ts  hotwords.test.ts  hotwords.ts  index.css
