[project]
name = "vibe-qwen-bff"
version = "0.1.0"
description = "Vibe-Qwen BFF：ASR/TTS 測試與管理平台的薄應用後端"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_qwen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
